fix blog post imgs on small devices

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -40,3 +40,10 @@ section {
   display: block;
   text-align: center;
 }
+
+@media only screen and (max-width : 425px) {
+
+  .blog-post-img img {
+    width: 100%;
+  }
+}
